@@ -12,6 +12,7 @@ Month day, 2005 - 3.6.2
 + [Herve Drolon] FreeImage_FlipHorizontal & FreeImage_FlipVertical now work with any bitmap type
 * [Herve Drolon] allowed loading of corrupted JPEG with a premature end of file
 * [Herve Drolon] fixed a memory leak with loading of exif JPEG images
+* [Detlev Vendt] changed some 'pointer-to-int' casts to 'poniter-to-long' for 64bit machines
 
 February 20, 2005 - 3.6.1
 * [Ryan Rubley] fixed a memory leak in the metadata API
